feature: Create Doc route Delete, clean code and adjust msg
